fix form input overflow issues for mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@ input[type=number]::-webkit-outer-spin-button {
       @apply flex  flex-col justify-between items-center
     }
     input{
-      @apply border-lightGray border-[1px] w-full tracking-wider font-medium mt-2 text-black px-3 text-sm py-4  rounded-lg outline-0 
+      @apply border-lightGray my-6 border-[1px] w-full tracking-wider font-medium mt-2 text-black px-3 text-sm py-4  rounded-lg outline-0 
     }
 
     label{
